--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <title>Weather App</title>
   </head>
   <body>
+    <header>
+      <div class="search">
+        <input type="text" id="searched" placeholder="Search..." />
+        <img src="" alt="" />
+      </div>
+      <button>Switch to °F</button>
+    </header>
+    <div class="date">
+      <h2>date value</h2>
+    </div>
+    <div class="main">
+      <h3>City Name</h3>
+      <h1>Temp</h1>
+      <h4>status</h4>
+    </div>
+    <div class="secondary">
+      <div class="block">
+        <h3>title</h3>
+        <h2>value</h2>
+      </div>
+      <div class="block">
+        <h3>title</h3>
+        <h2>value</h2>
+      </div>
+      <div class="block">
+        <h3>title</h3>
+        <h2>value</h2>
+      </div>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
