--- a/index.html
+++ b/index.html
@@ -11,30 +11,33 @@
     <header>
       <div class="search">
         <input type="text" id="searched" placeholder="Search..." />
-        <img src="" alt="" />
+        <img src="./resources/search.svg" alt="Search" />
       </div>
       <button>Switch to °F</button>
     </header>
     <div class="date">
-      <h2>date value</h2>
+      <h2>
+        Friday, 3rd Jun '22<br />
+        2:48 am
+      </h2>
     </div>
     <div class="main">
-      <h3>City Name</h3>
-      <h1>Temp</h1>
-      <h4>status</h4>
+      <h3>London</h3>
+      <h1>23 °C</h1>
+      <h4>Cloudy</h4>
     </div>
     <div class="secondary">
       <div class="block">
-        <h3>title</h3>
-        <h2>value</h2>
+        <h3>Humidity</h3>
+        <h2>74%</h2>
       </div>
       <div class="block">
-        <h3>title</h3>
-        <h2>value</h2>
+        <h3>Rain</h3>
+        <h2>0%</h2>
       </div>
       <div class="block">
-        <h3>title</h3>
-        <h2>value</h2>
+        <h3>Wind</h3>
+        <h2>12km/h</h2>
       </div>
     </div>
 
