--- a/index.html
+++ b/index.html
@@ -9,35 +9,32 @@
   </head>
   <body>
     <header>
-      <button>Switch to °F</button>
+      <button id="switchBtn">Switch to °F</button>
       <div class="search">
         <input type="text" id="searched" placeholder="Search..." />
-        <img src="./resources/search.svg" alt="Search" />
+        <img src="./resources/search.svg" alt="Search" id="searchBtn" />
       </div>
     </header>
     <div class="date">
-      <h2>
-        Friday, 3rd Jun '22<br />
-        2:48 am
-      </h2>
+      <h2 id="date">here</h2>
     </div>
     <div class="main">
-      <h3>London</h3>
-      <h1>23 °C</h1>
-      <h4>Cloudy</h4>
+      <h3 id="name">London</h3>
+      <h1 id="temp">23 °C</h1>
+      <h4 id="state">Cloudy</h4>
     </div>
     <div class="secondary">
       <div class="block">
         <h3>Humidity</h3>
-        <h2>74%</h2>
+        <h2 id="humidity">74%</h2>
       </div>
       <div class="block">
-        <h3>Rain</h3>
-        <h2>0%</h2>
+        <h3>Pressure</h3>
+        <h2 id="pressure">0%</h2>
       </div>
       <div class="block">
-        <h3>Wind</h3>
-        <h2>12km/h</h2>
+        <h3>Wind Speed</h3>
+        <h2 id="wind">12km/h</h2>
       </div>
     </div>
 
